L04-genereics